# ogc-metadata-conversion-lib

./: .gitignore  README.md  Taskfile.yaml  Taskfile.yml  main.py  notes.md  pyproject.toml
.github/workflows/: push.yaml
app/: README.md  main.py
data/: novasar_l2ard_hh_hv.xml  novasar_l2ard_hh_hv_19115-4.json  umm-c-1.18.5-sample.json
ocl/: convert.py  validate.py
ocl/cli/: app.py
ocl/models/: iso3.py  trainingdml.py  umm.py
ocl/models/simple/: trainingdml.py
schemas/ISO19115-4/: dqc.json
