[project.urls]
Homepage = "https://github.com/kurrawong/ogc-metadata-conversion-lib#readme"
Documentation = "https://github.com/kurrawong/ogc-metadata-conversion-lib#readme"
Source = "https://github.com/kurrawong/ogc-metadata-conversion-lib"
Changelog = "https://github.com/Kurrawong/ogc-metadata-conversion-lib/releases"

[project]
name = "ocl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name="Jamie Feiss", email="jamie.feiss@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.3",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ocl = "ocl.cli:app"

