[project]
name = "ocl-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "httpx>=0.28.1",
    "ocl",
]

[tool.uv.sources]
ocl = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
